# scut

./: .gitignore  Cargo.toml  README.md  error_contract.md  justfile  turn_lifecycle.md  version-info.json
.github/workflows/: ci.yml  publish.yml
cli/: Cargo.toml
cli/src/: config.rs  error.rs  io_utils.rs  main.rs  storage.rs  tray.rs
cli/src/command/: config.rs  download.rs  mod.rs  upload.rs
cli/src/command/config/: edit.rs
compose/: Cargo.toml
compose/src/: lib.rs  query.rs
scut/: Cargo.toml  test_data.txt
scut-cli/: Cargo.toml
scut-cli/src/: main.rs  storage.rs
scut-cli/src/command/: config.rs  mod.rs
scut-cli/src/command/config/: edit.rs
scut-core/: Cargo.toml
scut-core/src/: lib.rs
scut-core/src/config/: key.rs  mod.rs  setting.rs
scut-core/src/error/: command.rs
scut-core/src/interface/compression/: seven_zip.rs
scut-core/src/interface/config/: mod.rs  toml_file.rs
scut-core/src/interface/file_system/: local_file_system.rs  mock_file_system.rs
scut-core/src/interface/index/: mock_index.rs  query.rs
scut-core/src/interface/index/query/: impl_compose.rs  part.rs  turn_number.rs
scut-core/src/interface/predict/: mod.rs  simple_predict.rs
scut-core/src/interface/predict/simple_predict/: ddt.rs
scut-core/src/interface/storage/: dropbox_folder.rs  game_saves_folder.rs  mock_index_storage.rs
scut-core/src/interface/user_interaction/: mod.rs
scut-core/src/save/: autosave.rs  mod.rs  turn.rs
scut-core/test_data/simple_predict/: bugs.txt  downloads.txt  mixed.txt
scut-core/test_data/simple_predict_solo/: autosave.txt  bugs.txt  downloads.txt  mixed.txt  uploads.txt
scut-ui/src/: index.html  main.js  styles.css
scut-ui/src-tauri/: Cargo.toml  tauri.conf.json
scut-ui/src-tauri/src/: app.rs  config.rs  main.rs  message.rs  runner.rs  storage.rs  tray.rs  ui.rs  window.rs
scut/src/: lib.rs
scut/src/config/: key.rs  mod.rs  setting.rs
scut/src/error/: mod.rs  path.rs  report.rs  suggestions.rs  testing_error.rs
scut/src/interface/: mod.rs
scut/src/interface/compression/: mock_compression.rs  mod.rs  seven_zip.rs
scut/src/interface/config/: mod.rs  toml_file.rs
scut/src/interface/decision/: classic_prediction.rs  mod.rs  observant_decision.rs  patient_prediction.rs
scut/src/interface/file_system/: local_file_system.rs  mock_file_system.rs  mod.rs
scut/src/interface/index/: folder.rs  mock_index.rs  mod.rs  query.rs
scut/src/interface/index/query/: builder.rs  part.rs  player.rs  side.rs  turn.rs  turn_number.rs
scut/src/interface/predict/: mod.rs  simple_predict.rs  turns.md
scut/src/interface/predict/simple_predict/: ddt.rs
scut/src/interface/prediction/: mod.rs  simple_prediction.rs
scut/src/interface/prediction/simple_prediction/: ddt.rs
scut/src/interface/storage/: dropbox_folder.rs  folder.rs  game_saves_folder.rs  mock_index_storage.rs  mod.rs
scut/src/interface/user_interaction/: mod.rs  terminal.rs
scut/src/save/: autosave.rs  mod.rs  parse.rs  side.rs  turn.rs
scut/test_data/simple_predict/: autosave_only.txt  bugs.txt  downloads.txt  mixed.txt  uploads.txt
scut/test_data/simple_prediction/: autosave_only.txt  bugs.txt  downloads.txt  mixed.txt  uploads.txt
src/: config.rs  error.rs  fs.rs  io_utils.rs  main.rs  save.rs  side.rs  test.rs  utils.rs
src/command/: config.rs  download.rs  mod.rs  shared.rs  upload.rs
