[package]
name = "scut_core"
version = "0.4.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dirs = "5.0.1"
dropbox-dir = "1.0.0"
parsely = { git = "https://github.com/drmason13/parsely", branch = "develop" }
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.7.6"
tracing = "0.1.37"
compose = { path = "../compose" }
dyn-clone = "1.0.16"

[dev-dependencies]
indoc = "2.0.3"
paste = "1.0.14"
pretty_assertions = "1.4.0"
tempfile = "3.8.0"
