[package]
name = "scut-ui"
version = "0.0.0"
description = "Strategic Command Utility Tool system tray application UI"
authors = ["drmason13"]
license = ""
repository = "https://github.com/drmason13/scut"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
scut_core = { path = "../../scut-core" }

tauri = { version = "1.5", features = [
    "system-tray",
    "shell-open",
    "icon-ico",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tauri-plugin-positioner = { version = "1.0", features = ["system-tray"] }
anyhow = "1.0.79"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
